Create basic prototype script output viewer

--- a/app/views/project/editor/left-menu.jade
+++ b/app/views/project/editor/left-menu.jade
@@ -70,6 +70,7 @@ aside#left-menu.full-size(
 					option(value='latex') LaTeX
 					option(value='xelatex') XeLaTeX
 					option(value='lualatex') LuaLaTeX
+					option(value='python') Python
 					
 			.form-controls(ng-show="permissions.write")
 				label(for="rootDoc_id") #{translate("main_document")}
