--- a/app/views/project/editor/editor.jade
+++ b/app/views/project/editor/editor.jade
@@ -34,7 +34,7 @@ div.full-size(
 
 	.ui-layout-east
 		div(ng-if="ui.pdfLayout == 'sideBySide'")
-			include ./pdf
+			include ./output_panel/main
 
 	.ui-layout-resizer-controls.synctex-controls(
 		ng-show="!!pdf.url && settings.pdfViewer == 'pdfjs'"
@@ -60,5 +60,5 @@ div.full-size(
 	ng-if="ui.pdfLayout == 'flat'"
 	ng-show="ui.view == 'pdf'"
 )
-	include ./pdf
+	include ./output_panel/main
 	
