--- a/app/views/project/editor/editor.jade
+++ b/app/views/project/editor/editor.jade
@@ -29,7 +29,8 @@ div.full-size(
 			resize-on="layout:main:resize,layout:pdf:resize",
 			annotations="pdf.logEntryAnnotations[editor.open_doc_id]",
 			read-only="!permissions.write",
-			on-ctrl-enter="recompile"
+			on-ctrl-enter="recompile",
+			ace-mode="editor.ace_mode"
 		)
 
 	.ui-layout-east
