--- a/public/stylesheets/app/editor/output.less
+++ b/public/stylesheets/app/editor/output.less
@@ -145,11 +145,35 @@
 .script-output {
 	overflow: auto;
 	background-color: @gray-lightest;
-	padding: @line-height-computed;
+	padding: @line-height-computed / 2;
 	padding-top: 0;
 	
 	pre.output {
+		font-size: 14px;
 		white-space: pre-wrap;
+		word-wrap: break-word;
+		&.stdout {
+			color: black;
+		}
+		&.stderr {
+			color: @brand-danger;
+		}
+	}
+	
+	.output-file {
+		.output-file-page-header {
+			margin-bottom: 0;
+			padding-bottom: @line-height-computed / 4;
+		}
+		
+		img {
+			max-width: 100%;
+			max-height: 600px;
+		}
+		
+		.output-file-download-link {
+			margin-top: @line-height-computed / 2;
+		}
 	}
 }
 
