Add R as a supported language

--- a/app/views/project/editor/editor.jade
+++ b/app/views/project/editor/editor.jade
@@ -18,7 +18,7 @@ div.full-size(
 			theme="settings.theme",
 			keybindings="settings.mode",
 			font-size="settings.fontSize",
-			auto-complete="settings.autoComplete",
+			auto-complete="editor.editor_mode == 'latex' && settings.autoComplete",
 			spell-check-enabled="editor.editor_mode == 'latex'",
 			spell-check-language="project.spellCheckLanguage",
 			highlights="onlineUserCursorHighlights[editor.open_doc_id]"
@@ -31,7 +31,8 @@ div.full-size(
 			annotations="pdf.logEntryAnnotations[editor.open_doc_id]",
 			read-only="!permissions.write",
 			on-ctrl-enter="recompile",
-			ace-mode="editor.ace_mode"
+			ace-mode="editor.ace_mode",
+			wrap-lines="editor.editor_mode == 'latex'"
 		)
 
 	.ui-layout-east
