--- a/public/stylesheets/app/editor/output.less
+++ b/public/stylesheets/app/editor/output.less
@@ -171,6 +171,12 @@
 			max-height: 600px;
 		}
 		
+		iframe {
+			width: 100%;
+			height: 700px;
+			border: none;
+		}
+		
 		.output-file-download-link {
 			margin-top: @line-height-computed / 2;
 		}
