--- a/public/stylesheets/core/variables.less
+++ b/public/stylesheets/core/variables.less
@@ -30,7 +30,7 @@
 @brand-warning:         @orange;
 @brand-danger:          #E03A06;
 
-@project-list-link-color: darken(@blue, 10%);;
+@project-list-link-color: darken(@blue, 10%);
 
 //== Scaffolding
 //
