Order output files and display text

--- a/public/stylesheets/app/editor/output.less
+++ b/public/stylesheets/app/editor/output.less
@@ -177,6 +177,15 @@
 			border: none;
 		}
 		
+		.output-file-text {
+			pre {
+				margin: 0;
+				font-size: 14px;
+				white-space: pre-wrap;
+				word-wrap: break-word;
+			}
+		}
+		
 		.output-file-download-link {
 			margin-top: @line-height-computed / 2;
 		}
