--- a/app/views/project/editor/output_panel/script_output.jade
+++ b/app/views/project/editor/output_panel/script_output.jade
@@ -27,5 +27,12 @@ div.full-size(ng-controller="ScriptOutputController")
 				ng-if="file.type == 'pdf'"
 				ng-src="{{ file.url }}"
 			)
+			div.output-file-text(
+				ng-if="file.type == 'text'"
+			)
+				p.row-spaced-small.text-center.loading(ng-show="file.loading")
+					i.fa.fa-refresh.fa-spin
+					span  #{translate("loading")}
+				pre(ng-show="!file.loading") {{ file.content }}
 			p.output-file-download-link.text-center(ng-if="file.type != 'image'")
 				a(ng-href="{{file.url}}", target="_blank") Download
