Use a python and R example project

--- a/app/views/project/list/side-bar.jade
+++ b/app/views/project/list/side-bar.jade
@@ -9,13 +9,13 @@
 		li
 			a(
 				href,
-				ng-click="openCreateProjectModal()"
-			) #{translate("blank_project")}
+				ng-click="openCreateProjectModal('python')"
+			) #{translate("python_project")}
 		li
 			a(
 				href,
-				ng-click="openCreateProjectModal('example')"
-			) #{translate("example_project")}
+				ng-click="openCreateProjectModal('r')"
+			) #{translate("r_project")}
 		li
 			a(
 				href,
