--- a/public/stylesheets/app/editor/output.less
+++ b/public/stylesheets/app/editor/output.less
@@ -151,8 +151,7 @@
 		font-size: 14px;
 		white-space: pre-wrap;
 		word-wrap: break-word;
-		margin-top: 0;
-		margin-bottom: @line-height-computed / 2;
+		margin: (@line-height-computed / 2) 0;
 		&.stdout {
 			color: black;
 		}
