--- a/app/views/templates/index.jade
+++ b/app/views/templates/index.jade
@@ -68,7 +68,7 @@ block content
 				ng-click="cancel()"
 			) &times;
 			h3 #{translate("missing_template_question")}
-		.modal-body #{translate("tell_us_about_the_template")}
+		.modal-body If we are missing a template please send us one of: a zip file with the template, a DataJoy project url, or the url for the template online. Also please let us know a little about the template for the description.
 		.modal-footer
 			button.btn.btn-default(
 				ng-click="cancel()",
