--- a/app/views/project/list/side-bar.jade
+++ b/app/views/project/list/side-bar.jade
@@ -87,9 +87,5 @@
 -if (settings.enableSubscriptions && !hasSubscription)
 	.row-spaced(ng-if="projects.length > 0", ng-cloak).text-centered
 		hr
-		p.small #{translate("on_free_sl")}
-		p
-			a(href="/user/subscription/plans").btn.btn-primary #{translate("upgrade")}
-		p.small
-			| #{translate("or_unlock_features_bonus")} 
-			a(href="/user/bonus") #{translate("sharing_sl")} .
+		p.small DataJoy is free while in testing. 
+			a(href="/user/subscription/plans") Read More.
