Use logo for facebook posts

--- a/app/views/referal/bonus.jade
+++ b/app/views/referal/bonus.jade
@@ -134,7 +134,7 @@ block content
 				method: 'feed',
 				redirect_uri: 'https://www.getdatajoy.com',
 				link: '!{buildReferalUrl("fb")}',
-				picture: 'https://www.getdatajoy.com/brand/logo/logosmall.png',
+				picture: 'https://www.getdatajoy.com/img/logo.png',
 				name: 'DataJoy - Online Python and R Editor',
 				caption: 'Free Unlimited Projects and Compiles',
 				description: 'DataJoy is a free online Python and R Editor. Runs your scripts online and work together in real-time, with full version history.'
