--- a/app/views/project/list/side-bar.jade
+++ b/app/views/project/list/side-bar.jade
@@ -10,12 +10,12 @@
 			a(
 				href,
 				ng-click="openCreateProjectModal('python')"
-			) #{translate("python_project")}
+			) Python Project
 		li
 			a(
 				href,
 				ng-click="openCreateProjectModal('r')"
-			) #{translate("r_project")}
+			) R Project
 		li
 			a(
 				href,
